--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/noindex.js"></script>
+    <script type="text/javascript" src="./js/noindex.js"></script>
+    <script type="text/javascript">noindex();</script>
 </head>
 <body>
     555
