--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>有限会社 多田工務店｜宮崎県児湯郡高鍋町｜リフォーム・リノベーション｜注文住宅｜設計｜SIMPLE NOTE｜住まいの事ならお気軽にお問い合わせください</title>
     <script type="text/javascript" src="./js/noindex.js"></script>
     <script type="text/javascript">noindex();</script>
 </head>
