--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>有限会社 多田工務店｜宮崎県児湯郡高鍋町｜リフォーム・リノベーション｜注文住宅｜設計｜SIMPLE NOTE｜住まいの事ならお気軽にお問い合わせください</title>
     <script type="text/javascript" src="./js/noindex.js"></script>
     <script type="text/javascript">noindex();</script>
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <!--
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179243358-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-179243358-1');
+
+  </script>-->
 </head>
 <body>
     555
