--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="./js/noindex.js"></script>
     <script type="text/javascript">noindex();</script>
 
+    <link rel="shortcut icon" href="ren-image/favicon.png"> <!-- ファビコンの設定 -->
+
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <!--
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179243358-1"></script>
