--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="./js/noindex.js"></script>
     <script type="text/javascript">noindex();</script>
 
-    <link rel="shortcut icon" href="ren-image/favicon.png"> <!-- ファビコンの設定 -->
+    <link rel="shortcut icon" href="http://tadahouse.co.jp/ren-image/favicon.png"> <!-- ファビコンの設定 -->
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <!--
