--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>有限会社 多田工務店｜宮崎県児湯郡高鍋町｜リフォーム・リノベーション｜注文住宅｜設計｜SIMPLE NOTE｜住まいの事ならお気軽にお問い合わせください</title>
-    <meta name="description" content="㈲多田工務店は、木造住宅の設計・施工を専門とする宮崎県高鍋町の建築会社です。"> <!-- サイトの説明 -->
+    <meta name="description" content="家・住まいの事なら、㈲多田工務店までお気軽にお問い合わせください。デザイン住宅「SIMPLE NOTE」・リフォーム・リノベーション・フルオーダー住宅・大きな屋根とガレージのある家・木造住宅の設計・施工を専門とする宮崎県児湯郡高鍋町の建築会社です。ライフスタイルに合わせた理想の住まいをご提案致します｜TEL：0983-22-5191"> <!-- サイトの説明 -->
 
     <script type="text/javascript" src="./js/noindex.js"></script>
     <script type="text/javascript">noindex();</script>
