--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript">noindex();</script>
 
     <link rel="shortcut icon" href="http://tadahouse.co.jp/ren-image/favicon.png"> <!-- ファビコンの設定 -->
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- FontAwesomeの読み込み -->
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <!--
