--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>有限会社 多田工務店｜宮崎県児湯郡高鍋町｜リフォーム・リノベーション｜注文住宅｜設計｜SIMPLE NOTE｜住まいの事ならお気軽にお問い合わせください</title>
     <meta name="description" content="家・住まいの事なら、㈲多田工務店までお気軽にお問い合わせください。デザイン住宅「SIMPLE NOTE」・リフォーム・リノベーション・フルオーダー住宅・大きな屋根とガレージのある家・木造住宅の設計・施工を専門とする宮崎県児湯郡高鍋町の建築会社です。ライフスタイルに合わせた理想の住まいをご提案致します｜TEL：0983-22-5191"> <!-- サイトの説明 -->
 
-    <script type="text/javascript" src="./js/noindex.js"></script>
+    <script type="text/javascript" src="./ren2022-js/noindex.js"></script>
     <script type="text/javascript">noindex();</script>
 
     <link rel="shortcut icon" href="http://tadahouse.co.jp/ren-image/favicon.png"> <!-- ファビコンの設定 -->
