--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="家・住まいの事なら、㈲多田工務店までお気軽にお問い合わせください。デザイン住宅「SIMPLE NOTE」・リフォーム・リノベーション・フルオーダー住宅・大きな屋根とガレージのある家・木造住宅の設計・施工を専門とする宮崎県児湯郡高鍋町の建築会社です。ライフスタイルに合わせた理想の住まいをご提案致します｜TEL：0983-22-5191"> <!-- サイトの説明 -->
 
     <script type="text/javascript" src="./ren2022-js/noindex.js"></script>
-    <script type="text/javascript">noindex();</script>
+    <script type="text/javascript">noindex();</script><!--インデックさせない-->
 
     <link rel="shortcut icon" href="http://tadahouse.co.jp/ren-image/favicon.png"> <!-- ファビコンの設定 -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- FontAwesomeの読み込み -->
