--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +12,16 @@
 
     <link rel="shortcut icon" href="http://tadahouse.co.jp/ren-image/favicon.png"> <!-- ファビコンの設定 -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- FontAwesomeの読み込み -->
+
+
+<!--OGP設定：ここから-->
+<meta property="og:title" content="(有)多田工務店ホームページ">
+<meta property="og:type" content="website"><!--下層ページは「article」-->
+<meta property="og:description" content="家・住まいの事なら、㈲多田工務店までお気軽にお問い合わせください。">
+<meta property="og:url" content="http://tadahouse.co.jp/"><!--下層URLは絶対パス-->
+<meta property="og:site_name" content="(有)多田工務店ホームページ">
+<meta property="og:image" content="http://tadahouse.co.jp/ren-image/hd_logo.jpg">
+<!--//OGP設定：ここまで-->
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <!--
