--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta property="og:description" content="家・住まいの事なら、㈲多田工務店までお気軽にお問い合わせください。">
 <meta property="og:url" content="http://tadahouse.co.jp/"><!--下層URLは絶対パス-->
 <meta property="og:site_name" content="(有)多田工務店ホームページ">
-<meta property="og:image" content="http://tadahouse.co.jp/ren-image/hd_logo.jpg">
+<meta property="og:image" content="./ren2022-img/ogp_200x200.png">
 <!--//OGP設定：ここまで-->
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
