--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" href="http://tadahouse.co.jp/ren-image/favicon.png"> <!-- ファビコンの設定 -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- FontAwesomeの読み込み -->
 
+    <link rel="stylesheet" href="./ren2022-css/reset.css"> <!-- リセットcssの読み込み -->
 
 <!--OGP設定：ここから-->
 <meta property="og:title" content="(有)多田工務店ホームページ">
