--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="./ren2022-js/noindex.js"></script>
     <script type="text/javascript">noindex();</script><!--インデックさせない-->
 
-    <link rel="shortcut icon" href="http://tadahouse.co.jp/ren-image/favicon.png"> <!-- ファビコンの設定 -->
+    <link rel="shortcut icon" href="./ren2022-img/favicon.png"> <!-- ファビコンの設定 -->
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- FontAwesomeの読み込み -->
 
     <link rel="stylesheet" href="./ren2022-css/reset.css"> <!-- リセットcssの読み込み -->
