--- a/header.html
+++ b/header.html
@@ -18,7 +18,12 @@
 
 </head>
 <body>
-    555
-    <hr>
+
+<!--ここよりJSコーディングする-->    
+<header>
+
+</header>
+<!--//ここよりJSコーディングする-->
+
 </body>
 </html>
