--- a/header.html
+++ b/header.html
@@ -14,6 +14,7 @@
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet"> <!-- FontAwesomeの読み込み -->
 
     <link rel="stylesheet" href="./ren2022-css/reset.css"> <!-- リセットcssの読み込み -->
+    <link rel="stylesheet" href="./ren2022-css/header.css"> <!--ヘッダーcssの読み込み-->
 
 
 </head>
