--- a/header.html
+++ b/header.html
@@ -22,6 +22,11 @@
 
 <!--ここよりJSコーディングする-->    
 <header>
+    <div class="wrap">
+        <ul>
+            <li><a href="##">メニュー01</a></li>
+        </ul>
+    </div>
 ヘッダー
 </header>
 <!--//ここよりJSコーディングする-->
