--- a/header.html
+++ b/header.html
@@ -25,6 +25,7 @@
     <div class="wrap">
         <ul>
             <li><a href="##">メニュー01</a></li>
+            <li><a href="##">メニュー02</a></li>
         </ul>
     </div>
 ヘッダー
